# imx-vpuwrap

./: Android.bp  Android.mk  COPYING  ChangeLog  EULA.txt  Makefile  Makefile.am  Makefile.unit  Makefile_8mm  Makefile_8mp  Makefile_8mq  Makefile_iMX6  SCR-imx-vpuwrap.txt  autogen.sh  configure.ac  decode_stream.c  decode_stream.h  enc_auto_test.c  encode_stream.c  encode_stream.h  fb_render.c  fb_render.h  libfslvpuwrap.pc.in  libvpu_wrapper.pc.in  makefile  makefile.unit  sqlite_wrapper.c  sqlite_wrapper.h  test_dec_arm_elinux.c  test_enc_arm_elinux.c  utils.c  utils.h  vpu_wrapper.c  vpu_wrapper.go  vpu_wrapper.h  vpu_wrapper_amphion.c  vpu_wrapper_hantro.c  vpu_wrapper_hantro_VCencoder.c  vpu_wrapper_hantro_encoder.c  vpu_wrapper_hantro_encoder_all.c  (+3 more)
docs/: EULA.txt  vpu_wrapper_api_spec.doc
tools/gst_dump/: Makefile  gst_dump.c  gst_dump.out
vpu_wrapper_test/: Makefile  README  analysis.cpp  analysis.h  camera_input.cpp  camera_input.h  codec_api.cpp  codec_api.h  common.h  detect_device.cpp  detect_device.h  fb_sink.cpp  fb_sink.h  file_input.cpp  file_input.h  file_sink.cpp  file_sink.h  gl_sink.cpp  gl_sink.h  input.cpp  input.h  kms_sink.cpp  kms_sink.h  log.h  mxc_zpu_test.cpp  output.cpp  output.h  process.cpp  process.h  sink.cpp  sink.h  v4l2.cpp  v4l2.h  v4l2_codec.cpp  v4l2_codec.h  vpu_wrapper.bak  vpu_wrapper_decoder.cpp  vpu_wrapper_decoder.h
vpu_wrapper_test/doc/: README
